where-for-dinner/where-for-dinner-availability/.tanzu/config/httproute-where-for-dinner-availability.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  annotations:
    apps.tanzu.vmware.com/promotable: ""
    apps.tanzu.vmware.com/promote-group: ContainerApp/where-for-dinner-availability
  name: where-for-dinner-availability-http-route
spec:
  parentRefs:
  - group: networking.tanzu.vmware.com
    kind: Entrypoint
    name: where-for-dinner-availability
  rules:
  - backendRefs:
    - kind: Service
      name: where-for-dinner-availability
      port: 8080
